# MRacle

./: .env.example  .gitignore  Makefile  README.md  config.toml  docker-compose.yml  pyproject.toml
config/: log_conf.yaml
docker/: Dockerfile
src/mracle/: __main__.py  app.py  environment_settings.py
