[project]
name = "mracle"
version = "0.0.0"
description = "mracle"

readme = "README.md"

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    ## APP
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic-settings>=2.4.0",
    "langchain",
    "langchain-openai",
    "langfuse",
    "werkzeug ==2.3.8",
    ## MISC
    "toml",
]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff",
    ## DOCS
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    ## Jupyter
    "ipykernel",
]

[[tool.rye.sources]]
name = "default"
url = "https://pypi.org/simple/"

[tool.rye.scripts]
placeholder = "mracle.scripts.placeholder:placeholder_script"

[tool.pytest.ini_options]
minversion = "7.0.0"
addopts = [
    "--import-mode=importlib",
    "--color=yes",
    "--verbose",
]

testpaths = ["tests"]

# TODO: Make them inherit from yaml file
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)-20s :: %(name)-8s :: %(levelname)-8s :: %(filename)s:%(lineno)d - (%(funcName)s) :: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]
respect-gitignore = true

# extend-include = []

extend-exclude = [
    "docs",
    "tests",
]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]

select = [
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "C9", # mccabe
    # "D", # flake8-docstrings
    "E", # pycodestyle errors (default)
    "F", # pyflakes (default)
    "I", # isort
    "PD", # pandas-vet
    "PIE", # pie
    "PL", # pylint
    "PTH", # pathlib
    "Q", # flake8-quotes
    "RET", # return
    "RUF", # Enable all ruff-specific checks
    "SIM", # simplify
    "S307", # eval
    "T20", # (disallow print statements) keep debugging statements out of the codebase
    "W", # pycodestyle warnings
    "ASYNC" # async
]

ignore = [
    "E501", # Line too long, handled by ruff formatter
    "D107", # "Missing docstring in __init__",
]

unfixable = [
    "F401" # Unused imports.
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
some_alias = ""

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true

# mypy section
# Read more here: https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
files = ["src/mracle"]
strict = true
show_error_codes = true

# TODO: Check whether this is working
[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
source = ['src/mracle']
branch = true
context = '${CONTEXT}'

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    '@overload',
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
